--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <ul>
             <li><a href="#">Link 1</a></li>
             <li><a href="#">Link 2</a></li>
+            <li><a href="#">Link 3</a></li>
             <li><a href="#">Vestimenta</a></li>
         </ul>
     </nav>
