Testing images in hero section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
             <li><a href="#">Vestimenta</a></li>
         </ul>
     </nav>
-    <main>
+    <main class="hero">
+        <picture class="hero-imgs">
+            <img src="img/drive-m/DSC_0004-2.jpg" alt="">
+            <img src="img/drive-m/DSC_0019-2.jpg" alt="">
+            <img src="img/drive-j/IMG_9855.jpg" alt="">
+        </picture>
         <small>10.05.2025</small>
         <h1>Mique & Eva</h1>
         <strong>Hemos dicho que SI</strong>
