Trying to come back changes

--- a/index.html
+++ b/index.html
@@ -11,32 +11,34 @@
 </head>
 <body>
     <nav class="menu-guide">
-        <figure>EMOJI</figure>
+        <figure>M&E</figure>
         <ul>
             <li><a href="#">Link 1</a></li>
             <li><a href="#">Link 2</a></li>
             <li><a href="#">Link 3</a></li>
+            <li><a href="#">Link 4</a></li>
             <li><a href="#">Vestimenta</a></li>
         </ul>
     </nav>
-    <main>
-        <small>10.05.2025</small>
+    <main id="hero">
+        <img src="https://i.pinimg.com/enabled_lo/564x/a6/d2/9e/a6d29e7f7c95bc3775a30fa9cfeeca80.jpg" alt="">
         <h1>Mique & Eva</h1>
+        <small>10.05.2025</small>
         <strong>Hemos dicho que SI</strong>
         <aside class="countdown">
-            <div>
+            <div class="count-container">
                 <p id="days">00</p>
                 <span>Días</span>
             </div>
-            <div>
+            <div class="count-container">
                 <p id="hours">00</p>
                 <span>Horas</span>
             </div>
-            <div>
+            <div class="count-container">
                 <p id="minutes">00</p>
                 <span>Minutos</span>
             </div>
-            <div>
+            <div class="count-container">
                 <p id="seconds">00</p>
                 <span>Segundos</span>
             </div>
