Hero Section set up, add little styles of Information section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <nav class="menu-guide">
-        <figure>M&E</figure>
+        <span class="logo">M&E</span>
         <ul>
             <li><a href="#">Link 1</a></li>
             <li><a href="#">Link 2</a></li>
@@ -21,13 +21,22 @@
         </ul>
     </nav>
     <main class="hero">
+        <strong>¡Hemos dicho que SI!</strong>
+        <h1>Mique & Eva</h1>
         <picture class="hero-imgs">
-            <img src="img/drive-m/DSC_0004-2.jpg" alt="">
-            <img src="img/drive-m/DSC_0019-2.jpg" alt="">
-            <img src="img/drive-j/IMG_9855.jpg" alt="">
+            <div class="hero-img-date">
+                <img src="img/drive-m/DSC_0004-2.jpg" alt="">
+                <span>19</span>
+            </div>
+            <div class="hero-img-date">
+                <img src="img/drive-m/DSC_0019-2.jpg" alt="">
+                <span>04</span>
+            </div>
+            <div class="hero-img-date">
+                <img src="img/drive-j/IMG_9855.jpg" alt="">
+                <span>25</span>
+            </div>
         </picture>
-        <small>10.05.2025</small>
-        <strong>Hemos dicho que SI</strong>
         <aside class="countdown">
             <div class="count-container">
                 <p id="days">00</p>
@@ -46,8 +55,44 @@
                 <span>Segundos</span>
             </div>
         </aside>
-        <a href="#">Enterate</a>
     </main>
+    <section class="context">
+        <p>Existen ocasiones únicas en la vida que, aunque ya son especiales en sí mismas, se vuelven aún más memorables cuando las experimentamos con nuestros seres queridos</p>
+        <strong>Por eso te invitamos a nuestra boda para que seas parte de este momento tan importante para nosotros</strong>
+        <aside class="context-date">
+            <span class="context-date-day">Sábado</span>
+            <div>
+                <span class="context-date-month">Abril</span>
+                <span class="context-date-number-day">19</span>
+                <span class="context-date-number-year">2025</span>
+            </div>
+        </aside>
+    </section>
+    <section id="info">
+        <aside class="time">
+            <h2>Horarios</h2>
+            <ul>
+                <li>* Repeción 12:00h</li>
+                <li>* Ceremonia 12:30h</li>
+                <li>* Finalización 18:00h</li>
+            </ul>
+        </aside>
+        <aside class="place">
+            <h2>Ubicación</h2>
+            <p>Calle 1023, Ciudad</p>
+            <a href="#">Ver mapa</a>
+        </aside>
+        <aside id="cloth-code">
+            <h2>Código vestimenta</h2>
+            <p>Imagenes</p>
+            <p>Paleta de colores terracota. <strong>No Veige ni Blanco</strong></p>
+        </aside>
+        <aside id="donation">
+            <h2>¿Quieres regalarnos algo?</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi adipisci fuga vel.</p>
+            <p>Alias: bodaevaymique</p>
+        </aside>
+    </section>
     <section id="history">
         <h2>Nuestra historia</h2>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure voluptatem velit nostrum, eligendi eos reiciendis perferendis totam, laudantium est qui, sed nesciunt ipsa quos. Fuga delectus a voluptates doloremque assumenda.
@@ -67,40 +112,7 @@
             <img src="https://i.pinimg.com/enabled_lo/564x/88/a1/d9/88a1d974352e5a4cc40240695144886d.jpg" alt="">
         </article>
     </section>
-    <section id="info">
-        <h2>Información general</h2>
-        <aside>
-            <h3>Ubicación</h3>
-            <p>Calle 1023, Ciudad</p>
-        </aside>
-        <aside>
-            <h3>Fecha</h3>
-            <p>Martes 20 de Mayo 2025</p>
-            <small>20.05.2025</small>
-        </aside>
-        <aside>
-            <h3>Horarios</h3>
-            <ul>
-                <li>* Repeción 12:00h</li>
-                <li>* Ceremonia 12:30h</li>
-                <li>* Finalización 18:00h</li>
-            </ul>
-        </aside>
-    </section>
-    <section id="how-to-arrive">
-        <h2>¿Cómo llegar?</h2>
-        <p>Google Maps</p>
-    </section>
-    <section id="cloth-code">
-        <h2>Código vestimenta</h2>
-        <p>Imagenes</p>
-        <p>Paleta de colores terracota. <strong>No Veige ni Blanco</strong></p>
-    </section>
-    <section id="donation">
-        <h2>¿Quieres regalarnos algo?</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi adipisci fuga vel.</p>
-        <p>Alias: bodaevaymique</p>
-    </section>
+    
     <footer>
         <h2>20.05.2025</h2>
     </footer>
