--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li><a href="#">Link 2</a></li>
             <li><a href="#">Link 3</a></li>
             <li><a href="#">Link 4</a></li>
-            <li><a href="#">Vestimenta</a></li>
+            <li><a href="#cloth-code">Vestimenta</a></li>
         </ul>
     </nav>
     <main class="hero">
@@ -25,15 +25,15 @@
         <h1>Mique & Eva</h1>
         <picture class="hero-imgs">
             <div class="hero-img-date">
-                <img src="img/drive-m/DSC_0004-2.jpg" alt="">
+                <img src="img/drive-m/DSC_0080-2.jpg" alt="">
                 <span>19</span>
             </div>
             <div class="hero-img-date">
-                <img src="img/drive-m/DSC_0019-2.jpg" alt="">
+                <img src="img/drive-m/DSC_0099-2.jpg" alt="">
                 <span>04</span>
             </div>
             <div class="hero-img-date">
-                <img src="img/drive-j/IMG_9855.jpg" alt="">
+                <img src="img/drive-m/DSC_0086-2.jpg" alt="">
                 <span>25</span>
             </div>
         </picture>
@@ -58,6 +58,7 @@
     </main>
     <section class="context">
         <p>Existen ocasiones únicas en la vida que, aunque ya son especiales en sí mismas, se vuelven aún más memorables cuando las experimentamos con nuestros seres queridos</p>
+        <img class="icon invitation" src="icon/invitation.svg" alt="invitation icon">
         <strong>Por eso te invitamos a nuestra boda para que seas parte de este momento tan importante para nosotros</strong>
         <aside class="context-date">
             <span class="context-date-day">Sábado</span>
@@ -70,27 +71,49 @@
     </section>
     <section id="info">
         <aside class="time">
+            <img class="icon ceremony" src="icon/ceremony.svg" alt="ceremony icon">
             <h2>Horarios</h2>
             <ul>
-                <li>* Repeción 12:00h</li>
-                <li>* Ceremonia 12:30h</li>
-                <li>* Finalización 18:00h</li>
+                <li>
+                    <p>Recepción</p>
+                    <em>13:00h</em>
+                </li>
+                <li>
+                    <p>Ceremonia</p>
+                    <em>13:30h</em>
+                </li>
+                <li>
+                    <p>Finalización</p>
+                    <em>19:00h</em>
+                </li>
             </ul>
         </aside>
         <aside class="place">
+            <img class="icon mappin" src="icon/mappin.svg" alt="mappin icon">
             <h2>Ubicación</h2>
-            <p>Calle 1023, Ciudad</p>
-            <a href="#">Ver mapa</a>
+            <p>Av. del Limite, Ibarlucea, Santa Fe</p>
+            <p>Colectivos que llegan: 102R y 153</p>
+            <a href="https://maps.app.goo.gl/r8RZEYimFUQt6V9h7" target="_blank">Ver mapa</a>
+        </aside>
+        <aside class="park">
+            <img class="icon parking" src="icon/parking.svg" alt="parking icon">
+            <h2>Estacionamiento</h2>
+            <p>Hay estacionamiento disponible para autos y motos</p>
         </aside>
         <aside id="cloth-code">
+            <figure>
+                <img class="icon dresscode-men" src="icon/dresscode-men.svg" alt="dresscode-men icon">
+            <img class="icon dresscode-women" src="icon/dresscode-women.svg" alt="dresscode-women icon">
+            </figure>
             <h2>Código vestimenta</h2>
-            <p>Imagenes</p>
-            <p>Paleta de colores terracota. <strong>No Veige ni Blanco</strong></p>
+            <p>Deseamos que...</p>
+            <p><strong>No Veige ni Blanco</strong></p>
         </aside>
         <aside id="donation">
+            <img class="icon gift" src="icon/gift.svg" alt="gift icon">
             <h2>¿Quieres regalarnos algo?</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi adipisci fuga vel.</p>
-            <p>Alias: bodaevaymique</p>
+            <p><strong>Alias: bodaevaymique</strong></p>
         </aside>
     </section>
     <section id="history">
@@ -101,15 +124,15 @@
     <section id="galery">
         <h2>Galería</h2>
         <article class="images">
-            <img src="https://i.pinimg.com/enabled_lo/564x/a6/d2/9e/a6d29e7f7c95bc3775a30fa9cfeeca80.jpg" alt="" width="200">
-            <img src="https://i.pinimg.com/enabled_lo/564x/3a/46/83/3a4683951daebc37621a97c337713111.jpg" alt="">
-            <img src="https://i.pinimg.com/enabled_lo/564x/06/95/19/0695192f6c14aaa9a0090d4884de1625.jpg" alt="">
-            <img src="https://i.pinimg.com/564x/af/b1/df/afb1df681cb3f02e6f943382523638c3.jpg" alt="">
-            <img src="https://i.pinimg.com/enabled_lo/564x/4e/1c/d6/4e1cd635c56e264480a219bc323d09d6.jpg" alt="">
-            <img src="https://i.pinimg.com/enabled_lo/564x/b4/2f/b7/b42fb70c0ceba35933ef78e13e899ade.jpg" alt="">
-            <img src="https://i.pinimg.com/564x/bb/5c/ed/bb5ceddcb0a0f443088aa63b8aaaf29a.jpg" alt="">
-            <img src="https://i.pinimg.com/enabled_lo/564x/15/62/bf/1562bff96a240d892331bdb10ef57044.jpg" alt="">
-            <img src="https://i.pinimg.com/enabled_lo/564x/88/a1/d9/88a1d974352e5a4cc40240695144886d.jpg" alt="">
+            <img src="img/drive-j/IMG_9857.jpg" alt="" width="200">
+            <img src="img/drive-m/DSC_0058-2.jpg" alt="">
+            <img src="img/drive-m/DSC_0068-2.jpg" alt="">
+            <img src="img/drive-m/DSC_9876-3.jpg" alt="">
+            <img src="img/drive-j/IMG_9881.jpg" alt="">
+            <img src="img/drive-m/DSC_9887-3.jpg" alt="">
+            <img src="img/drive-m/DSC_0040-2.jpg" alt="">
+            <img src="img/drive-m/DSC_9985-3.jpg" alt="">
+            <img src="img/drive-j/IMG_9863.jpg" alt="">
         </article>
     </section>
     
