Add more icons and sections

--- a/index.html
+++ b/index.html
@@ -76,15 +76,15 @@
             <ul>
                 <li>
                     <p>Recepción</p>
-                    <em>13:00h</em>
+                    <em>-13:00h-</em>
                 </li>
                 <li>
                     <p>Ceremonia</p>
-                    <em>13:30h</em>
+                    <em>-13:30h-</em>
                 </li>
                 <li>
                     <p>Finalización</p>
-                    <em>19:00h</em>
+                    <em>-19:00h-</em>
                 </li>
             </ul>
         </aside>
@@ -92,7 +92,7 @@
             <img class="icon mappin" src="icon/mappin.svg" alt="mappin icon">
             <h2>Ubicación</h2>
             <p>Av. del Limite, Ibarlucea, Santa Fe</p>
-            <p>Colectivos que llegan: 102R y 153</p>
+            <p>Colectivos que llegan: <strong>102R y 153</strong></p>
             <a href="https://maps.app.goo.gl/r8RZEYimFUQt6V9h7" target="_blank">Ver mapa</a>
         </aside>
         <aside class="park">
@@ -100,20 +100,47 @@
             <h2>Estacionamiento</h2>
             <p>Hay estacionamiento disponible para autos y motos</p>
         </aside>
+        <aside id="menu-food">
+            <img class="icon menu-food" src="icon/menu-food.svg" alt="menu-food icon">
+            <h2>Menú de comida</h2>
+            <p>Fiambre</p>
+            <p>Costillar</p>
+            <p>Torta</p>
+        </aside>
         <aside id="cloth-code">
             <figure>
                 <img class="icon dresscode-men" src="icon/dresscode-men.svg" alt="dresscode-men icon">
-            <img class="icon dresscode-women" src="icon/dresscode-women.svg" alt="dresscode-women icon">
+                <img class="icon dresscode-women" src="icon/dresscode-women.svg" alt="dresscode-women icon">
             </figure>
             <h2>Código vestimenta</h2>
             <p>Deseamos que...</p>
             <p><strong>No Veige ni Blanco</strong></p>
         </aside>
+        <aside id="music">
+            <img class="icon music" src="icon/music.svg" alt="music icon">
+            <h2>¡Que no falte musica!</h2>
+            <p>Agrega el tema que no debe faltar para el evento en esta lista de Spotify:</p>
+            <p><a href="https://open.spotify.com/playlist/6KugRUp0t0urz0VeGPeXkQ?si=9immtGtJRDyTAmPf1dxp1g">Agregar canción a la lista</a></p>
+        </aside>
+        <aside id="whatsapp">
+            <img class="icon whatsapp" src="icon/whatsapp.svg" alt="whatsapp icon">
+            <h2>Confirmanos tu asistencia</h2>
+            <p>Escribinos a través de nuestro número de WhatsApp:</p>
+            <p><a href="#">WhatsApp Novio</a></p>
+            <p><a href="#">WhatsApp Novia</a></p>
+        </aside>
+        <aside id="pay">
+            <img class="icon pay" src="icon/pay.svg" alt="pay icon">
+            <h2>¿Cómo pagar la tarjeta?</h2>
+            <p>Efectivo, o transferencia a:</p>
+            <p><strong>Alias: tarjetamye2025</strong></p>
+        </aside>
         <aside id="donation">
             <img class="icon gift" src="icon/gift.svg" alt="gift icon">
             <h2>¿Quieres regalarnos algo?</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi adipisci fuga vel.</p>
-            <p><strong>Alias: bodaevaymique</strong></p>
+            <p>Puedes transferirnos a a esta cuenta:</p>
+            <p><strong>Alias: bodamiqueyeva2025</strong></p>
+            <p>¡Cualquier otro regalo que nos quieras dar en lugar de dinero, es mas que bienvenido!</p>
         </aside>
     </section>
     <section id="history">
