Little changes of orthogaphy

--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
         <aside id="menu-food">
             <img class="icon menu-food" src="icon/menu-food.svg" alt="menu-food icon">
             <h2>Menú de comida</h2>
-            <p>Durante la recepción serán agasajados con unos exquisitos panes de campo caseros y empandas, una espectacular tabla de fiambres y una barra de tragos.</p>
-            <p>La entrada serán unos chorizos con papas rusticas riquísimas. Continuamos con el mejor costillar y vacío a la estaca con diversidad de ensaladas, seguido de postre helado. Para finalizar una pizzas épicas y champagne.</p>
-            <p><strong>Por favor comunícate con alguno de los novios si tienes alguna restricción alimenticia, alergia o  condición que no te permita consumir ciertos productos</strong>, así podremos estar en contacto con el catering del salón y así podrás disfrutar de un excelente menú acorde a tus necesidades.</p>
+            <p>Durante la recepción serán agasajados con unos exquisitos panes de campo caseros y empanadas, una espectacular tabla de fiambres y una barra de tragos.</p>
+            <p>La entrada serán unos chorizos con papas rústicas riquisimas. Continuamos con el mejor costillar y vacío a la estaca con variedad de ensaladas, seguido de un postre helado. Para finalizar unas pizzas épicas y champagne.</p>
+            <p><strong>Por favor comunícate con uno de los novios si tienes alguna restricción alimentaria, alergia o condición médica que no te permita consumir ciertos productos</strong>, así podremos coordinar con el catering del salón y disfrutaras de un excelente menú acorde a tus necesidades.</p>
         </aside>
         <aside id="cloth-code">
             <figure>
@@ -118,8 +118,8 @@
                 <img class="icon dresscode-women" src="icon/dresscode-women.svg" alt="dresscode-women icon">
             </figure>
             <h2>Código vestimenta</h2>
-            <p>Nuestra boda se realizara durante el día en otoño, podes escoger un oufit lindo y formal inspirándote en esta hermosa temporada con tantos colores.</p>
-            <p><strong>Ten en cuenta dejar el color blanco, beige o similares para la novia en este gran día.</strong></p>
+            <p>Nuestra boda se realizará durante el día en otoño, puedes escoger un outfit formal inspirándote en los colores del esta época.</p>
+            <p><strong>Ten en cuenta de dejar el color blanco, beige o similares para la novia en este gran día.</strong></p>
         </aside>
         <aside id="music">
             <img class="icon music" src="icon/music.svg" alt="music icon">
@@ -138,15 +138,18 @@
         <aside id="pay">
             <img class="icon pay" src="icon/pay.svg" alt="pay icon">
             <h2>¿Cómo pagar la tarjeta?</h2>
-            <p>Efectivo, o transferencia a:</p>
+            <p>Puedes pagar en efectivo o realizar una transferencia a la siguiente cuenta:</p>
             <p><strong>Alias: <em id="alias-tarjeta" >tarjetamye2025</em><button onclick="copy('alias-tarjeta')">Copiar</button></strong></p>
+            <p>Recuerda verificar el costo actualizado de la tarjeta para este mes antes de realizar el pago.</p>
+            <p><small>Niños de 3 a 10 años abonan la mitad</small></p>
+            <p><small>Bebes de hasta 3 años no abonan tarjeta</small></p>
         </aside>
         <aside id="donation">
             <img class="icon gift" src="icon/gift.svg" alt="gift icon">
             <h2>¿Quieres regalarnos algo?</h2>
-            <p>Puedes transferirnos a a esta cuenta:</p>
+            <p>Puedes realizar una transferencia a la siguiente cuenta:</p>
             <p><strong><em id="alias-regalos">Alias: bodamiqueyeva2025</em></strong><button onclick="copy('alias-regalos')">Copiar</button></p>
-            <p>¡Cualquier otro regalo que nos quieras dar en lugar de dinero, es mas que bienvenido!</p>
+            <p>O, si prefieres, cualquier otro regalo que nos quieras dar es más que bienvenido. Agradecemos de corazón cualquier detalle que nos quieras ofrecer.</p>
         </aside>
     </section>
     <section id="history">
