--- a/index.html
+++ b/index.html
@@ -12,20 +12,27 @@
 <body>
     <header class="top">
         <nav class="menu-guide">
-            <span class="logo">M&E</span>
-            <ul>
-                <li><a class="button-55" role="button" href="#">Link 1</a></li>
-                <li><a class="button-55" role="button" href="#">Link 2</a></li>
-                <li><a class="button-55" role="button" href="#">Link 3</a></li>
-                <li><a class="button-55" role="button" href="#">Link 4</a></li>
-                <li><a class="button-55" role="button" href="#cloth-code">Vestimenta</a></li>
+            <span  class="logo" style="align-self: center;">M&E</span>
+            <!-- <ul id="desktop-links">
+                <li><a id="link" class="button-55" role="button" href="#hero">Home</a></li>
+                <li><a id="link" class="button-55" role="button" href="#invitation">Información</a></li>
+                <li><a id="link" class="button-55" role="button" href="#history">Nuestra historia</a></li>
+                <li><a id="link" class="button-55" role="button" href="#confirmation">Confirmar asistencia</a></li>
             </ul>
+            <div id="mobile-links" class="this">
+                <ul>
+                    <li><a id="link-mobile" class="button-55" role="button" href="#hero">Home</a></li>
+                    <li><a id="link-mobile" class="button-55" role="button" href="#invitation">Información</a></li>
+                    <li><a id="link-mobile" class="button-55" role="button" href="#history">Nuestra historia</a></li>
+                    <li><a id="link-mobile" class="button-55" role="button" href="#confirmation">Confirmar asistencia</a></li>
+                </ul>
+            </div> -->
         </nav>
         <img src="img/mask.png" alt=""  
             style="transform: rotate(180deg) translateY(25%);">
     </header>
     <article class="page">
-    <main class="hero">
+    <main id="hero" class="hero">
         <strong class="fade-in-top">¡Hemos dicho que SI!</strong>
         <h1 class="fade-in-top">Mique & Eva</h1>
         <picture class="hero-imgs flip-in-hor-bottom">
@@ -63,7 +70,7 @@
     </main>
     <section class="context">
         <p>Existen ocasiones únicas en la vida que, aunque ya son especiales en sí mismas, se vuelven aún más memorables cuando las experimentamos con nuestros seres queridos</p>
-        <img class="icon invitation" src="icon/invitation.svg" alt="invitation icon">
+        <img id="invitation" class="icon invitation" src="icon/invitation.svg" alt="invitation icon">
         <strong>Por eso te invitamos a nuestra boda para que seas parte de este momento tan importante para nosotros</strong>
         <aside class="context-date">
             <span class="context-date-day">Sábado</span>
@@ -96,9 +103,9 @@
         <aside class="place">
             <img class="icon mappin" src="icon/mappin.svg" alt="mappin icon">
             <h2>Ubicación</h2>
-            <p><em>Av. del Limite, Ibarlucea, Santa Fe</em></p>
-            <p>Colectivos que llegan: <strong><em>102R y 153</em></strong></p>
-            <a class="button-55" role="button" href="https://maps.app.goo.gl/r8RZEYimFUQt6V9h7" target="_blank">Ver mapa</a>
+            <p><em><strong>Av. del Limite, Ibarlucea, Santa Fe</strong></em></p>
+            <p>Líneas de colectivo que llegan cerca al lugar: <strong><em>102R y 153</em></strong></p>
+            <a class="button-55" role="button" href="https://maps.app.goo.gl/r8RZEYimFUQt6V9h7" target="_blank"><img class="icon wedding-directon" src="icon/wedding-direction.svg" alt=""> Ver mapa</a>
         </aside>
         <aside class="park">
             <img class="icon parking" src="icon/parking.svg" alt="parking icon">
@@ -125,56 +132,69 @@
             <img class="icon music" src="icon/music.svg" alt="music icon">
             <h2>¡Que no falte buena musica!</h2>
             <p>Agrega el tema que no puede faltar en el evento en esta lista de <strong>Spotify</strong>:</p>
-            <p><a class="button-55" role="button" href="https://open.spotify.com/playlist/6KugRUp0t0urz0VeGPeXkQ?si=9immtGtJRDyTAmPf1dxp1g">Agrega una canción</a></p>
+            <p><a class="button-55" role="button" href="https://open.spotify.com/playlist/6KugRUp0t0urz0VeGPeXkQ?si=laRb9oTDSyKlEVUmA04imA&pt=ab95f9c1757ad33e548e74f78c623672"><img class="icon spotify" src="icon/spotify.svg" alt=""> Agrega una canción</a></p>
         </aside>
-        <aside id="whatsapp">
-            <img class="icon whatsapp" src="icon/whatsapp.svg" alt="whatsapp icon">
+        <aside id="confirmation">
+            <img class="icon confirmation" src="icon/confirmation.svg" alt="confirmation icon">
             <h2>Confirmanos tu asistencia</h2>
             <p>Llena el <strong>formulario</strong> y escribinos a través de nuestro número de <strong>WhatsApp</strong>:</p>
-            <p><a class="button-55" role="button" href="#">Formulario</a></p>
-            <p><a class="button-55" role="button" href="#">WhatsApp Novio</a></p>
-            <p><a class="button-55" role="button" href="#">WhatsApp Novia</a></p>
+            <p><a class="button-55" target="_blank" role="button" href="https://forms.gle/JQyhDLW5KHp6pL96A"><img class="icon form" src="icon/form.svg" alt=""> Formulario</a></p>
+            <span style="display: flex; gap: 1rem">
+                <p><a class="button-55" target="_blank" role="button" href="https://wa.me/5493413586961"><img class="icon whatsapp" src="icon/whatsapp.svg" alt=""> Novio</a></p>
+            <p><a class="button-55" target="_blank" role="button" href="https://wa.me/5493412705478"><img class="icon whatsapp" src="icon/whatsapp.svg" alt=""> Novia</a></p>
+            </span>
         </aside>
         <aside id="pay">
             <img class="icon pay" src="icon/pay.svg" alt="pay icon">
             <h2>¿Cómo pagar la tarjeta?</h2>
-            <p>Puedes pagar en efectivo o realizar una transferencia a la siguiente cuenta:</p>
-            <p><strong>Alias: <em id="alias-tarjeta" >tarjetamye2025</em><button onclick="copy('alias-tarjeta')">Copiar</button></strong></p>
+            <p>Puedes pagar en <strong>efectivo</strong> o realizar una <strong>transferencia</strong> a la siguiente cuenta:</p>
+            <p style="margin-block: 1rem"><strong style="display: flex; align-items: center; gap: 1rem;">Alias:<em id="alias-tarjeta" >tarjetamye2025</em><button class="button-55" role="button" onclick="copy('alias-tarjeta')"><img class="icon copy"  src="icon/copy.svg" alt=""> Copiar</button></strong></p>
             <p>Recuerda verificar el costo actualizado de la tarjeta para este mes antes de realizar el pago.</p>
-            <p><small>Niños de 3 a 10 años abonan la mitad</small></p>
-            <p><small>Bebes de hasta 3 años no abonan tarjeta</small></p>
+            <ul>
+                <li>
+                    <p><strong><p>Importante</p><small> Todos los niños de hasta 10 años deben presentar su DNI para ingresar.</small></strong></p>
+                </li>
+                <li>
+                    <p><strong><p>Tarifa infantil</p><small>Niños de 4 a 10 años pagan la mitad del precio.</small></strong></p>
+                </li>
+                <li>
+                    <p><strong><p>Exención de tarifa</p><small>Bebés y niños de hasta 4 años no pagan tarjeta.</small></strong></p>
+                </li>
+            </ul>
         </aside>
         <aside id="donation">
             <img class="icon gift" src="icon/gift.svg" alt="gift icon">
             <h2>¿Quieres regalarnos algo?</h2>
             <p>Puedes realizar una transferencia a la siguiente cuenta:</p>
-            <p><strong><em id="alias-regalos">Alias: bodamiqueyeva2025</em></strong><button onclick="copy('alias-regalos')">Copiar</button></p>
+            <p style="margin-block: 1rem"><strong style="display: flex; align-items: center; gap: 1rem;">Alias: <em id="alias-regalos">bodamiqueyeva2025</em><button class="button-55" role="button" onclick="copy('alias-regalos')"><img class="icon copy"  src="icon/copy.svg" alt="">Copiar</button></strong></p>
             <p>O, si prefieres, cualquier otro regalo que nos quieras dar es más que bienvenido. Agradecemos de corazón cualquier detalle que nos quieras ofrecer.</p>
         </aside>
     </section>
     <section id="history">
-        <h2>Nuestra historia</h2>
+        <h2 style="font-size: 3rem; text-align: center;">Nuestra historia</h2>
         <p>Nuestra hermosa historia fue escrita y sellada en el corazón de Dios.
-            Nuestros  caminos se entrelazaron por primera vez en una reunión en nuestra iglesia el 16 de Junio de 2018, desde aquel entonces comenzó la amistad mas linda, nuestro cariño fue creciendo a lo largo de los años, superando muchos obstáculos. Conocimos la belleza de Jesús en el corazón del otro  y descubriendo la perfecta voluntad de Dios para nosotros. Hemos dicho que Si, al plan de Dios como familia y estamos tan felices de que seas parte de esto.
+            Nuestros  caminos se entrelazaron por primera vez en una reunión en nuestra iglesia el 16 de Junio de 2018, desde aquel entonces comenzó la amistad mas linda, nuestro cariño fue creciendo a lo largo de los años, superando muchos obstáculos.</p>
+        <p style="margin-top: 0.3rem; margin-bottom: 1rem;">Conocimos la belleza de Jesús en el corazón del otro  y descubriendo la perfecta voluntad de Dios para nosotros. Hemos dicho que Si, al plan de Dios como familia y estamos tan felices de que seas parte de esto.
         </p>
     </section>
     <section id="galery">
-        <h2>Galería</h2>
         <article class="images">
-            <img src="img/drive-j/IMG_9857.jpg" alt="" width="200">
-            <img src="img/drive-m/DSC_0058-2.jpg" alt="">
-            <img src="img/drive-m/DSC_0068-2.jpg" alt="">
-            <img src="img/drive-m/DSC_9876-3.jpg" alt="">
-            <img src="img/drive-j/IMG_9881.jpg" alt="">
-            <img src="img/drive-m/DSC_9887-3.jpg" alt="">
-            <img src="img/drive-m/DSC_0040-2.jpg" alt="">
-            <img src="img/drive-m/DSC_9985-3.jpg" alt="">
-            <img src="img/drive-j/IMG_9863.jpg" alt="">
+            <img class="tilt-in-left-1" src="img/drive-j/IMG_9857.jpg" loading="lazy" alt="">
+            <img class="tilt-in-right-1" src="img/drive-m/DSC_0058-2.jpg" loading="lazy" alt="">
+            <img class="tilt-in-left-1" src="img/drive-m/DSC_0068-2.jpg" loading="lazy" alt="">
+            <img class="tilt-in-right-1" src="img/drive-m/DSC_9876-3.jpg" loading="lazy" alt="">
+            <img class="tilt-in-left-1" src="img/drive-j/IMG_9881.jpg" loading="lazy" alt="">
+            <img class="tilt-in-right-1" src="img/drive-m/DSC_9887-3.jpg" loading="lazy" alt="">
+            <img class="tilt-in-left-1" src="img/drive-m/DSC_0040-2.jpg" loading="lazy" alt="">
+            <img class="tilt-in-right-1" src="img/drive-m/DSC_9985-3.jpg" loading="lazy" alt="">
+            <img class="tilt-in-left-1" src="img/drive-j/IMG_9863.jpg" loading="lazy" alt="">
         </article>
     </section>
     
     <footer>
-        <h2>20.05.2025</h2>
+        <h2 style="text-align: center; margin-block: 3rem; display: flex;
+        flex-direction: column; align-items: center; gap: 0.5rem">19.04.2025<div class="loader"></div></h2>
+        
     </footer>
 
     </article>
