Solve orthographic errors and change the place of Nuestroa Historia

--- a/index.html
+++ b/index.html
@@ -68,8 +68,15 @@
             </div>
         </aside>
     </main>
+    <section id="history">
+        <h2 style="font-size: 3rem; text-align: center;">Nuestra historia</h2>
+        <p style="text-align: center;">Nuestra hermosa historia fue escrita y sellada en el corazón de Dios.
+            Nuestros  caminos se entrelazaron por primera vez en una reunión en nuestra iglesia el 16 de Junio de 2018, desde aquel entonces comenzó la amistad mas linda, nuestro cariño fue creciendo a lo largo de los años, superando muchos obstáculos.</p>
+        <p style="margin-top: 0.3rem; margin-bottom: 1rem; text-align: center;">Conocimos la belleza de Jesús en el corazón del otro  y descubriendo la perfecta voluntad de Dios para nosotros. Hemos dicho que Si, al plan de Dios como familia y estamos tan felices de que seas parte de esto.
+        </p>
+    </section>
     <section class="context">
-        <p>Existen ocasiones únicas en la vida que, aunque ya son especiales en sí mismas, se vuelven aún más memorables cuando las experimentamos con nuestros seres queridos</p>
+        <!-- <p>Existen ocasiones únicas en la vida que, aunque ya son especiales en sí mismas, se vuelven aún más memorables cuando las experimentamos con nuestros seres queridos</p> -->
         <img id="invitation" class="icon invitation" src="icon/invitation.svg" alt="invitation icon">
         <strong>Por eso te invitamos a nuestra boda para que seas parte de este momento tan importante para nosotros</strong>
         <aside class="context-date">
@@ -158,24 +165,17 @@
                     <p><strong><p>Tarifa infantil</p><small>Niños de 4 a 10 años pagan la mitad del precio.</small></strong></p>
                 </li>
                 <li>
-                    <p><strong><p>Exención de tarifa</p><small>Bebés y niños de hasta 4 años no pagan tarjeta.</small></strong></p>
+                    <p><strong><p>Exepción de tarifa</p><small>Bebés y niños de hasta 4 años no pagan tarjeta.</small></strong></p>
                 </li>
             </ul>
         </aside>
         <aside id="donation">
             <img class="icon gift" src="icon/gift.svg" alt="gift icon">
             <h2>¿Quieres regalarnos algo?</h2>
-            <p>Puedes realizar una transferencia a la siguiente cuenta:</p>
+            <p>Puedes realizar una <strong>transferencia</strong> a la siguiente cuenta:</p>
             <p style="margin-block: 1rem"><strong style="display: flex; align-items: center; gap: 1rem;">Alias: <em id="alias-regalos">bodamiqueyeva2025</em><button class="button-55" role="button" onclick="copy('alias-regalos')"><img class="icon copy"  src="icon/copy.svg" alt="">Copiar</button></strong></p>
             <p>O, si prefieres, cualquier otro regalo que nos quieras dar es más que bienvenido. Agradecemos de corazón cualquier detalle que nos quieras ofrecer.</p>
         </aside>
-    </section>
-    <section id="history">
-        <h2 style="font-size: 3rem; text-align: center;">Nuestra historia</h2>
-        <p>Nuestra hermosa historia fue escrita y sellada en el corazón de Dios.
-            Nuestros  caminos se entrelazaron por primera vez en una reunión en nuestra iglesia el 16 de Junio de 2018, desde aquel entonces comenzó la amistad mas linda, nuestro cariño fue creciendo a lo largo de los años, superando muchos obstáculos.</p>
-        <p style="margin-top: 0.3rem; margin-bottom: 1rem;">Conocimos la belleza de Jesús en el corazón del otro  y descubriendo la perfecta voluntad de Dios para nosotros. Hemos dicho que Si, al plan de Dios como familia y estamos tan felices de que seas parte de esto.
-        </p>
     </section>
     <section id="galery">
         <article class="images">
