--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body>
     <header class="top">
         <nav class="menu-guide">
-            <span  class="logo" style="align-self: center;">M&E</span>
+            <!-- <span class="logo" style="align-self: center;">M&E</span> -->
+            <img src="icon/logo.svg" alt="" style="width: 60px; margin-inline: auto; margin-block: 1rem;">
             <!-- <ul id="desktop-links">
                 <li><a id="link" class="button-55" role="button" href="#hero">Home</a></li>
                 <li><a id="link" class="button-55" role="button" href="#invitation">Información</a></li>
