Solve grammatical erros

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <img class="icon dresscode-women" src="icon/dresscode-women.svg" alt="dresscode-women icon">
             </figure>
             <h2>Código vestimenta</h2>
-            <p>Nuestra boda se realizará durante el día en otoño, puedes escoger un outfit formal inspirándote en los colores del esta época.</p>
+            <p>Nuestra boda se realizará durante el día en otoño, puedes escoger un outfit formal inspirándote en los colores de esta época.</p>
             <p><strong>Ten en cuenta de dejar el color blanco, beige o similares para la novia en este gran día.</strong></p>
         </aside>
         <aside id="music">
@@ -151,7 +151,7 @@
                     <p><strong><p>Tarifa infantil</p><small>Niños de 4 a 10 años pagan la mitad del precio.</small></strong></p>
                 </li>
                 <li>
-                    <p><strong><p>Exepción de tarifa</p><small>Bebés y niños de hasta 4 años no pagan tarjeta.</small></strong></p>
+                    <p><strong><p>Excepción de tarifa</p><small>Bebés y niños de hasta 4 años no pagan tarjeta.</small></strong></p>
                 </li>
             </ul>
         </aside>
